--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div id="container">
-    <h1>Prova i nostri giochi</h1>
-    <div id="buttons">
-      <button onclick="location.href='gioco1.html'">Gioco 1</button>
-      <button onclick="location.href='gioco2.html'">Gioco 2</button>
-      <button onclick="location.href='gioco3.html'">Gioco 3</button>
-      <button onclick="location.href='gioco4.html'">Gioco 4</button>
-    </div>
+<div id="container">
+  <h1>prova i nostri giochi</h1>
+  <div id="buttons">
+    <button onclick="location.href='gioco1.html'">conosci davvero<br>il tuo partner?</button>
+    <button onclick="location.href='gioco2.html'">il gioco delle domande</button>
+    <button onclick="location.href='gioco3.html'">segreti piccanti<br>(solo per adulti)</button>
+    <button onclick="location.href='gioco4.html'">in arrivo....</button>
   </div>
-<div class="petals"></div>
+</div>
 </body>
 </html>
