--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div id="container">
-  <h1>prova i nostri giochi</h1>
+<div id="title-container">
+  <h1>Prova i Maxis Games!</h1>
+</div>
+<div id="button-container">  
   <div id="buttons">
-    <button onclick="location.href='gioco1.html'">conosci davvero<br>il tuo partner?</button>
-    <button onclick="location.href='gioco2.html'">il gioco delle domande</button>
-    <button onclick="location.href='gioco3.html'">segreti piccanti<br>(solo per adulti)</button>
-    <button onclick="location.href='gioco4.html'">in arrivo....</button>
+    <button onclick="location.href='https://maxys2025.github.io/QuestionsGame/'">Questions Game<span class="button-description">Un nuovo gioco per conoscersi e scoprirsi</span></button>
+    <button onclick="location.href='https://maxys2025.github.io/couplegame/'">Couple Game<span class="button-description">Conosci davvero il tuo partner?</span></button>
+    <button onclick="location.href='https://maxys2025.github.io/Hot-Secrets/'">Hot Secrets<span class="button-description">Hai coraggio di svelare i tuoi segreti piccanti?</span></button>
+    <button onclick="return false;">In arrivo...<span class="button-description">Molte novità in arrivo!</span></button>
   </div>
 </div>
 </body>
