--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div id="title-container">
-  <h1>Prova i Maxis Games!</h1>
+  <h1>Prova i Maxys Games!</h1>
 </div>
 <div id="button-container">  
   <div id="buttons">
