--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div id="buttons">
     <button onclick="location.href='https://maxys2025.github.io/Questions-Game-V2/'">Questions Game<span class="button-description">Un nuovo gioco per conoscersi e scoprirsi</span></button>
     <button onclick="location.href='https://maxys2025.github.io/couplegame/'">Couple Game<span class="button-description">Conosci davvero il tuo partner?</span></button>
-    <button onclick="location.href='https://maxys2025.github.io/Hot-Secrets/'">Hot Secrets<span class="button-description">Hai coraggio di svelare i tuoi segreti piccanti?</span></button>
+    <button onclick="location.href='https://maxys2025.github.io/Hot-Secrets-V2/'">Hot Secrets<span class="button-description">Hai coraggio di svelare i tuoi segreti piccanti?</span></button>
     <button onclick="return false;">In arrivo...<span class="button-description">Molte novità in arrivo!</span></button>
   </div>
 </div>
