--- a/index.html
+++ b/index.html
@@ -8,15 +8,7 @@
 </head>
 <body>
 <div id="title-container">
-  <h1>Prova i Maxys Games!</h1>
-</div>
-<div id="button-container">  
-  <div id="buttons">
-    <button onclick="location.href='https://maxys2025.github.io/Questions-Game-V2/'">Questions Game<span class="button-description">Un nuovo gioco per conoscersi e scoprirsi</span></button>
-    <button onclick="location.href='https://maxys2025.github.io/Couple-Game-V2/'">Couple Game<span class="button-description">Conosci davvero il tuo partner?</span></button>
-    <button onclick="location.href='https://maxys2025.github.io/Hot-Secrets-V2/'">Hot Secrets<span class="button-description">Hai coraggio di svelare i tuoi segreti piccanti?</span></button>
-    <button onclick="return false;">In arrivo...<span class="button-description">Molte novità in arrivo!</span></button>
-  </div>
+  <h1>Il sitto è in fase di aggiornamento, stiamo lavorando per migliorare i nostri giochi</h1>
 </div>
 </body>
 </html>
