--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div id="title-container">
-  <h1>Il sitto è in fase di aggiornamento, stiamo lavorando per migliorare i nostri giochi</h1>
+  <h1>Il sito è in fase di aggiornamento</br> stiamo lavorando per migliorare i nostri giochi</h1>
 </div>
 </body>
 </html>
