--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 <div id="title-container">
   <h1>Il sito è in fase di aggiornamento</br> stiamo lavorando per migliorare i nostri giochi</h1>
+  <h2>Torna l'8 di dicembre per scoprire le novità</h2>
 </div>
 </body>
 </html>
