--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
 <div id="title-container">
-  <h1>Il sito è in fase di aggiornamento</br> stiamo lavorando per migliorare i nostri giochi</h1>
-  <h2>Torna l'8 di dicembre per scoprire le novità</h2>
+  <h1>L'aggiornamento è quasi concluso, torneremo online a breve!</h1>
 </div>
 </body>
 </html>
