--- a/index.html
+++ b/index.html
@@ -1,31 +1,17 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scopri il Nuovo Sito!</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin-top: 20%;
-            background-color: #121212;
-        }
-        a {
-            color: #c493fd;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Maxys Games</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Un Nuovo Inizio!</h1>
-    <p>Siamo entusiasti di annunciarti che il gioco delle domande si è evoluto e ora ha una nuova casa!</p>
+<div id="title-container">
+  <h1>Un nuovo inizio!</h1>
+  <p>Siamo entusiasti di annunciarti che il gioco delle domande si è evoluto e ora ha una nuova casa!</p>
     <p>Scopri tutte le novità e divertiti ancora di più visitando il nostro nuovo sito:</p>
     <p><a href="https://maxys2025.github.io/Maxys-Games/" target="_blank">Esplora il Nuovo Sito</a></p>
-    <p>Non vediamo l'ora di averti con noi nella nuova avventura. Clicca il link e unisciti al divertimento!</p>
+</div>
 </body>
 </html>
