--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h1>Un nuovo inizio!</h1>
   <p>Siamo entusiasti di annunciarti che il gioco delle domande si è evoluto e ora ha una nuova casa!</p>
     <p>Scopri tutte le novità e divertiti ancora di più visitando il nostro nuovo sito:</p>
-    <p><a href="https://maxys2025.github.io/Maxys-Games/" target="_blank">Esplora il Nuovo Sito</a></p>
+    <button><a href="https://maxys2025.github.io/Maxys-Games/" target="_blank">Esplora il Nuovo Sito</a></button>
 </div>
 </body>
 </html>
